tests/pos/grty3.hs
module Test where

{-@ bar :: (a, [b]) -> b @-}
bar (_, [x]) = x



